# sense

./: .gitignore  .gitlab-ci.yml  .pylintrc  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGES.rst  Dockerfile  MANIFEST.in  README.md  README.rst  environment.yml  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/: convert_README_rst_to_md.yml
.github/workflows/: convert_README_rst_to_md.yaml  convert_README_rst_to_md.yml  convert_rst_to_md.yaml  draft-pdf.yml  test_build_pytest.yml
docs/: 01_Introduction.rst  02_Installation.rst  03_Usage.rst  04_Theory.rst  Makefile  annex_technical.rst  authors.rst  conf.py  docs_requirements.txt  index.rst  paper.md  references.bib  references_01_introduction.bib  requirements.txt
docs/images/: rt_model.odp
docs/joss_paper/: paper.bib  paper.md
docs/notebooks/: Dubois95_SSRT.ipynb  Example_1_Forward_modeling_of_RT_models_surface_part.ipynb  Example_2_Forward_modeling_of_RT_model_combination.ipynb  Example_3_Inversion_of_RT_models.ipynb  Example_4_Soil_moisture_retrieval.ipynb  I2EM.ipynb  Oh04.ipynb  sm_retrieval.ipynb
docs/text_blocks_README_RtD/: installation_with_conda.rst  installation_with_docker.rst  installation_with_virtualenv.rst  statement_of_need.rst  support_contributing_testing.rst  testing_rtd_jupyter_dependencies.rst
joss_paper/: paper.bib  paper.md  rt_model_small.odp
sense/: __init__.py  canopy.py  core.py  model.py  scatterer.py  soil.py  util.py
sense/dielectric/: __init__.py  dobson85.py  epsmodel.py
tests/: test_iem.py  test_model.py  test_scatterer.py
(+17 files in other folders)
