[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
preview = true

[tool.isort]
profile = "black"
line_length = 100

[tool.pylint.format]
max-line-length = "100"
target-version = "py310"

[tool.ruff]
line-length = 100
indent-width = 4
src = ["src"]
unsafe-fixes = true
ignore-init-module-imports = true

[tool.ruff.lint]
select = [
  "A", "ARG", "B", "C4", "D", "E", "W", "EXE", "F", "I",
  "ISC", "N", "NPY201", "PGH", "PIE", "PL", "PTH", "PYI",
  "RUF", "SIM", "TRY", "YTT"
]
ignore = [
  "D100", "D104", "D105", "D203", "D213", "N803", "N806",
  "PIE796", "PLR", "PTH123", "PTH207", "ISC001", "TRY003"
]
exclude = ["scripts"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401", "F403"]
"tests/**" = ["D", "N", "PTH"]

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
exclude = ["*.pyi"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
